Checkpoint closed Current Base installed launch and persistent role leases